# Pulsar

./: .gitignore  01-blueprint.md  02-reference.md  CMakeLists.txt  command.md  config.json  config.test.json  config.webrtc.json
audio/capture/linux/pipewire/: CMakeLists.txt
audio/capture/linux/pipewire/include/: pipewire_audio_capture.h
audio/capture/linux/pipewire/src/: pipewire_audio_capture.cpp
audio/encoder/opus/all/: CMakeLists.txt
audio/encoder/opus/all/include/: opus_encoder.h
audio/encoder/opus/all/src/: opus_encoder.cpp
auth/all/password/: CMakeLists.txt
auth/all/password/include/: password_auth.h
auth/all/password/src/: password_auth.cpp
core/: CMakeLists.txt
core/include/: app_manager.h  audio.h  audio_capture.h  audio_encoder.h  audio_mixer.h  audio_playback.h  auth.h  buffer_pool.h  capabilities.h  capture.h  chat.h  dispatcher.h  encoder.h  error.h  frame.h  input.h  logger.h  metrics.h  multiplexer.h  negotiation.h  packet_sink.h  pipeline.h  preprocessor.h  profiler.h  queue.h  reconnect.h  recorder.h  session.h  shared_session.h  thread_config.h  transport.h  wake_on_lan.h
core/src/: pipeline.cpp  profiler.cpp
input/linux/uinput/: CMakeLists.txt
input/linux/uinput/include/: uinput_handler.h
input/linux/uinput/src/: uinput_handler.cpp
recordings/: pulsar_20260705_113750.h264
server/: CMakeLists.txt
server/include/: config.h  config_parser.h  factory.h  server_profiler.h  session_detect.h  session_services.h
server/src/: config_parser.cpp  factory.cpp  main.cpp  profiler.cpp  session_detect.cpp  session_services.cpp
test/: test_drm_virtual.cpp
transport/quic/linux/: CMakeLists.txt
transport/quic/linux/include/: quic_transport.h
transport/quic/linux/src/: quic_transport.cpp
transport/rdp/all/: CMakeLists.txt
transport/rdp/all/include/: rdp_transport.h
transport/rdp/all/src/: rdp_transport.cpp
transport/rtp/all/: CMakeLists.txt
transport/rtp/all/include/: rtp_transport.h
transport/rtp/all/src/: rtp_transport.cpp
transport/vnc/all/: CMakeLists.txt
transport/vnc/all/include/: vnc_transport.h
transport/vnc/all/src/: vnc_transport.cpp
transport/webrtc/linux/: CMakeLists.txt
transport/webrtc/linux/include/: webrtc_transport.h
transport/webrtc/linux/src/: webrtc_transport.cpp
video/capture/linux/drm_virtual/: CMakeLists.txt
video/capture/linux/drm_virtual/include/: drm_virtual_capture.h
video/capture/linux/drm_virtual/src/: drm_virtual_capture.cpp
video/capture/linux/pipewire/: CMakeLists.txt
video/capture/linux/pipewire/include/: pipewire_capture.h
video/capture/linux/pipewire/src/: kwin_screencast.h  mutter_screencast.cpp  mutter_screencast.h  pipewire_capture.cpp  portal_screencast.cpp  portal_screencast.h
video/capture/linux/xcb/: CMakeLists.txt
video/capture/linux/xcb/include/: xcb_capture.h
video/capture/linux/xcb/src/: xcb_capture.cpp
video/encoder/nvenc/: CMakeLists.txt
video/encoder/nvenc/include/: nvenc_encoder.h
video/encoder/nvenc/linux/: CMakeLists.txt
video/encoder/nvenc/linux/src/: nvenc_encoder.cpp
video/encoder/rdp/all/: CMakeLists.txt
video/encoder/rdp/all/include/: rdp_encoder.h
video/encoder/rdp/all/src/: rdp_encoder.cpp
video/encoder/vaapi/linux/: CMakeLists.txt
video/encoder/vaapi/linux/include/: vaapi_encoder.h
video/encoder/vaapi/linux/src/: vaapi_encoder.cpp
video/encoder/vnc/all/: CMakeLists.txt
video/encoder/vnc/all/include/: vnc_encoder.h
video/encoder/vnc/all/src/: vnc_encoder.cpp
video/encoder/x264/all/: CMakeLists.txt
video/encoder/x264/all/include/: x264_encoder.h
video/encoder/x264/all/src/: x264_encoder.cpp
video/preprocessor/all/cpu/: CMakeLists.txt
video/preprocessor/all/cpu/include/: cpu_preprocessor.h
video/preprocessor/all/cpu/src/: cpu_preprocessor.cpp
video/preprocessor/linux/dmabuf/: CMakeLists.txt
video/preprocessor/linux/dmabuf/include/: dmabuf_importer.h
video/preprocessor/linux/dmabuf/src/: dmabuf_importer.cpp
video/preprocessor/linux/gpu/: CMakeLists.txt
video/preprocessor/linux/gpu/include/: gpu_preprocessor.h
video/preprocessor/linux/gpu/src/: gpu_preprocessor.cpp
