add_executable(pulsar_server
    src/main.cpp
    src/factory.cpp
    src/config_parser.cpp
    src/profiler.cpp
    src/session_detect.cpp
    src/session_services.cpp
)

target_include_directories(pulsar_server
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(pulsar_server
    PRIVATE
        pulsar_core
        capture_drm_virtual
        capture_xcb
        capture_pipewire_video
        preprocessor_cpu
        preprocessor_dmabuf
        preprocessor_gpu
        encoder_nvenc
        encoder_vaapi
        encoder_x264
        transport_rtp
        transport_quic
        transport_webrtc
        input_uinput
        audio_capture_pipewire
        audio_encoder_opus
        auth_password
)
